# VideoSummarizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_services.sh
VideoSummarizer/: __init__.py  asgi.py  settings.py  urls.py
app/: admin.py  apps.py  models.py  services.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_usersettings_url_summary_prompt_and_more.py
static/css/: style.css
static/js/: app.js
templates/: index.html
